# anime-detection-bot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
deployment/: README.md  deploy_config.yaml  main.tf  outputs.tf  terragrunt.hcl  variables.tf
deployment/apigw/: main.tf
deployment/container_model/: main.tf  outputs.tf  variables.tf
deployment/lambda_bot/: main.tf  variables.tf
deployment/storage_bucket/: main.tf
deployment/telegram_bot/: main.tf  variables.tf
extra/: bot_event_example.json
service/bot_api/: entrypoints.py  pyproject.toml  requirements.txt
service/bot_api/presentation/presentation_bot/: app.py  lambda_handler.py
service/bot_api/resources/: help.html  start.html
service/bot_api/service/: app_service.py
service/bot_api/shared/: constants.py  settings.py
service/bot_api/supplier/: supplier_http.py
service/model_api/: Dockerfile  build_and_deploy.sh  entrypoints.py  pyproject.toml  requirements.txt
service/model_api/inference/: inference.py
service/model_api/presentation/: main.py  router.py
service/model_api/schemas/: base.py
service/model_api/service/: ml_service.py  processing_service.py
service/model_api/shared/: container.py  settings.py
service/model_api/supplier/: s3_supplier.py
service/model_api/tests/: test_e2e.py
