[tool.poetry]
name = "bot_api"
version = "0.1.0"
description = ""
authors = ["Peter Ibragimov"]

[tool.poetry.dependencies]
python = "^3.11"
ujson = "^4.3.0"
aws-lambda-powertools = "^1.28.0"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
uvloop = "^0.17.0"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
